# GurianovProgramming

./: CMakeLists.txt
Fifth_labwork/: only_lyambda.cpp  template_lyambda.cpp
Fourth_labwork/: main.cpp
LINO_labwork/: main.cpp
Lecture/: lecture1.txt  lecture2.txt  lecture3.txt  lecture4.txt  Алгоритм accumulate.docx  Лекция 1. Введение_Типы и значения Управляющие_структуры.docx  Лекция 2. Массивы.docx  Лекция 3. Многомерные массивы.docx  Лекция 4. Функции.docx  Лекция 5. Лямбда и алгоритмы.docx  Лекция 6. Шаблоны функций.docx  Лекция 7. Указатели, ссылки и массивы.docx  Лекция 8. Строки как массивы символов.docx  Лекция 9. Строки string.docx
Seventh_Eighth_labwork/: charcpp.cpp  stringcpp.cpp
Sixth_labwork/: main.cpp
Third_labwork/: main.cpp
