cmake_minimum_required(VERSION 3.29)
project(GurianovProgramming)

set(CMAKE_CXX_STANDARD 26)

add_executable(GurianovProgramming LINO_labwork/main.cpp
        Third_labwork/main.cpp
        Fourth_labwork/main.cpp
        Fifth_labwork/only_lyambda.cpp
        Fifth_labwork/template_lyambda.cpp
        Sixth_labwork/main.cpp
        Seventh_Eighth_labwork/charcpp.cpp
        Seventh_Eighth_labwork/stringcpp.cpp)
